# nvcf

./: .bazel_downloader_config  .bazelignore  .bazelrc  .coderabbit.yaml  .gitignore  .security-triage.yaml  AGENTS.md  BAZEL.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  dependencies.md  go.work.bazel  maven_install.json  setup.sh
ci/: Dockerfile.bazel  check-pr-issue.sh
ci/test/: check-pr-issue.test.sh
examples/java-spring-boot-service/: .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel  maven_install.json
infra/cassandra/: .bazelrc  .gitignore  .license-header.txt  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  README.md
infra/cassandra/rules/: BUILD.bazel  repos.bzl
infra/cassandra/rules/oci/: BUILD.bazel  defs.bzl  transition.bzl
infra/cassandra/rules/oci/private/: BUILD.bazel  common.bzl
infra/cassandra/scripts/: cassandra-env.sh
infra/cassandra/tools/: BUILD.bazel
infra/cassandra/tools/ci/: BUILD.bazel  cassandra_version_consistency_test.sh
rules/java/: AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  bom_alignment.bzl  defs.bzl  notice.bzl  platform.bzl  proto.bzl  spring.bzl
rules/java/private/: oci.bzl  spring_boot.bzl
rules/java/scripts/: BUILD.bazel  check_bom_alignment.sh
src/compute-plane-services/ess-agent/api/: BUILD.bazel  go.mod  go.sum
src/compute-plane-services/ess-agent/api/auth/approle/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/aws/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/azure/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/gcp/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/kubernetes/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/ldap/: BUILD.bazel
src/compute-plane-services/ess-agent/api/auth/userpass/: BUILD.bazel
src/compute-plane-services/ess-agent/child/: BUILD.bazel  child.go
src/compute-plane-services/ess-agent/config/: BUILD.bazel
src/compute-plane-services/ess-agent/logging/: BUILD.bazel
src/compute-plane-services/ess-agent/nv/: BUILD.bazel
src/compute-plane-services/ess-agent/nv/telemetry/: BUILD.bazel
src/compute-plane-services/ess-agent/renderer/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/: BUILD.bazel  go.mod  go.sum
src/compute-plane-services/ess-agent/sdk/database/dbplugin/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/framework/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/authmetadata/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/base62/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/certutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/cidrutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/compressutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/consts/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/cryptoutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/custommetadata/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/dbtxn/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/errutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/hclutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/identitytpl/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/jsonutil/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/helper/kdf/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/logical/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/physical/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/plugin/: BUILD.bazel  grpc_backend_test.go
src/compute-plane-services/ess-agent/sdk/queue/: BUILD.bazel
src/compute-plane-services/ess-agent/sdk/version/: BUILD.bazel
src/compute-plane-services/ess-agent/service_os/: BUILD.bazel
src/compute-plane-services/ess-agent/signals/: BUILD.bazel
src/compute-plane-services/ess-agent/template/: BUILD.bazel
src/compute-plane-services/ess-agent/test/: BUILD.bazel
src/compute-plane-services/ess-agent/version/: BUILD.bazel
src/compute-plane-services/ess-agent/watch/: BUILD.bazel
src/compute-plane-services/worker-init/service/: BUILD.bazel  service.go  service_command_test.go  service_run_test.go  service_test.go
src/compute-plane-services/worker-utils/service/: BUILD.bazel  service.go  service_test.go
src/compute-plane-services/worker-utils/spot/: BUILD.bazel  clusterGroups.json  spot.go
src/control-plane-services/cloud-tasks/: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BAZEL.md  BUILD.bazel  MODULE.bazel  NOTICE  bazel-java-ci.json  generate_notice.sh  lombok.config  maven_install.json  notice_metadata.json  pom.xml
src/control-plane-services/cloud-tasks/local_env/: docker-compose.test.yml  docker-compose.yml
src/control-plane-services/cloud-tasks/local_env/cassandra/: cassandra.yaml  entrypoint.sh  keystore.node0  truststore.node0
src/control-plane-services/cloud-tasks/local_env/vault/: secrets.json
src/control-plane-services/cloud-tasks/nvct-core/: BUILD.bazel  pom.xml
src/control-plane-services/cloud-tasks/nvct-service/: BUILD.bazel  Dockerfile  pom.xml
src/control-plane-services/cloud-tasks/tools/bazel/: BUILD.bazel  generate_notice.sh  java.bzl  notice_check_test.sh  proto.bzl  runfiles.bzl  workspace_status.sh
src/invocation-plane-services/http-invocation/: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md
src/invocation-plane-services/http-invocation/.cargo/: config.toml
src/invocation-plane-services/http-invocation/crates/server/: BUILD.bazel  Cargo.toml  build.rs
src/invocation-plane-services/http-invocation/rules/oci/: transition.bzl
src/invocation-plane-services/http-invocation/tools/: workspace_status.sh
src/libraries/go/lib/: AGENTS.md  BUILD.bazel  README.md  go.mod  go.sum
src/libraries/go/lib/cmd/icms-translate/: BUILD.bazel
tools/bazel/java/: BUILD.bazel  generate_notice.py  generate_notice_test.py  jacoco_test_runner.sh  lcov_to_sonar_generic.py  lcov_to_sonar_generic_test.sh  license_aliases.json  notice_diff_test.sh
(+3093 files in other folders)
