# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

FROM ubuntu:24.04

ARG BAZELISK_VERSION=1.25.0
ARG BAZEL_VERSION=8.6.0
ARG GRPCURL_VERSION=1.9.1
ARG KUBEBUILDER_TOOLS_VERSION=1.30.3

ENV DEBIAN_FRONTEND=noninteractive

RUN apt-get update -qq && apt-get install -y -qq --no-install-recommends \
    curl git gcc g++ python3 \
    docker.io docker-compose-v2 \
    build-essential cmake pkg-config perl lld \
    ca-certificates \
    jq unzip \
    libssl-dev \
    capnproto \
  && rm -rf /var/lib/apt/lists/* \
  && update-alternatives --install /usr/bin/ld ld /usr/bin/ld.lld 100
# capnproto provides the system `capnp` schema compiler. The stargate
# subtree's `crates/protocol/build.rs` invokes `capnpc::CompilerCommand`
# at build time, which spawns the host `capnp` binary. The upstream
# stargate Dockerfile installs the same package.
# libssl-dev provides the system openssl headers + libs at
# /usr/include/openssl/*.h and /usr/lib/x86_64-linux-gnu/libssl.so.
# Rust Phase B services (rs-autoscaler !113 first; future Rust services
# that pull scylla / reqwest-with-native-tls) feed those paths to the
# openssl-sys build script via a crate.annotation in their MODULE.bazel:
#   build_script_env = {
#     OPENSSL_LIB_DIR     = /usr/lib/x86_64-linux-gnu,
#     OPENSSL_INCLUDE_DIR = /usr/include,
#     OPENSSL_NO_VENDOR   = 1,
#   }
# Without libssl-dev the build script reports "openssl/opensslv.h:
# No such file or directory" even though the env vars are set.
# jq is required by the cds/cicd-pipelines `.vault-reader-before-script`
# template, which iterates `$SECRETS_TO_RETRIEVE_IN_JSON | jq -c '.[]'`
# to drive vault secret retrieval. Without jq the loop silently runs
# zero iterations, NGC_REGISTRY_TOKEN never gets exported, and any
# downstream `bazel run //:image_push` 401s against nvcr.io. First
# reproduced on nvcf-grpc-proxy MR !69 (job 316400245).
# unzip is required by the same template chain's `.nv-vault` snippet
# that downloads NVIDIA's nvault wrapper from urm.nvidia.com and
# unpacks it into vault/bin/.

# grpcurl is used by the .bazel-remote-probe step in .gitlab-ci.yml to
# do a real GetCapabilities round-trip against bb-storage before the
# build commits to --config=remote-write. A TCP/h2-preface probe is
# not enough: a runner can complete the handshake to the cache and
# still be unable to drive a useful gRPC conversation across an IT
# firewall. If GetCapabilities fails, the probe disables remote
# caching for the run instead of letting Bazel hang on the same RPC.
RUN arch="$(uname -m)" && case "$arch" in x86_64) arch=x86_64;; aarch64|arm64) arch=arm64;; esac \
  && curl -fSL -o /tmp/grpcurl.tgz \
     "https://github.com/fullstorydev/grpcurl/releases/download/v${GRPCURL_VERSION}/grpcurl_${GRPCURL_VERSION}_linux_${arch}.tar.gz" \
  && tar -xzf /tmp/grpcurl.tgz -C /usr/local/bin grpcurl \
  && chmod +x /usr/local/bin/grpcurl \
  && rm -f /tmp/grpcurl.tgz

# docker-compose shim for Testcontainers withLocalCompose(true).
RUN printf '#!/usr/bin/env bash\ndocker compose "$@"\n' > /usr/local/bin/docker-compose \
  && chmod +x /usr/local/bin/docker-compose

# envtest binaries (Apache 2.0): supplies kube-apiserver, etcd, and
# kubectl that controller-runtime's envtest framework loads via
# KUBEBUILDER_ASSETS. nvca's //pkg/storage:storage_test and
# //internal/miniservice:miniservice_test rely on envtest; without these
# binaries the tests panic with "KUBEBUILDER_ASSETS not set".
#
# Source: kubernetes-sigs/controller-tools releases. The legacy
# storage.googleapis.com/kubebuilder-tools/ bucket was retired and
# returns 403; the canonical mirror is now controller-tools GitHub
# releases (see envtest-releases.yaml in that repo). Tarball layout:
#   controller-tools/envtest/{etcd,kube-apiserver,kubectl}
# `--strip-components=2` drops both parents so binaries land directly
# under /usr/local/kubebuilder/bin/.
#
# Version pin: kept in lockstep with the controller-runtime version
# in nvca's go.mod (currently controller-runtime v0.19.x -> K8s 1.30.x).
ENV KUBEBUILDER_ASSETS=/usr/local/kubebuilder/bin
RUN arch="$(uname -m)" && case "$arch" in x86_64) arch=amd64;; aarch64|arm64) arch=arm64;; esac \
  && mkdir -p /usr/local/kubebuilder/bin \
  && curl -fSL "https://github.com/kubernetes-sigs/controller-tools/releases/download/envtest-v${KUBEBUILDER_TOOLS_VERSION}/envtest-v${KUBEBUILDER_TOOLS_VERSION}-linux-${arch}.tar.gz" \
     | tar -xz --strip-components=2 -C /usr/local/kubebuilder/bin \
  && /usr/local/kubebuilder/bin/kube-apiserver --version \
  && /usr/local/kubebuilder/bin/etcd --version

# Bazelisk (installed as `bazel`).
RUN arch="$(uname -m)" && case "$arch" in x86_64) arch=amd64;; aarch64|arm64) arch=arm64;; esac \
  && curl -fSL -o /usr/local/bin/bazel \
     "https://github.com/bazelbuild/bazelisk/releases/download/v${BAZELISK_VERSION}/bazelisk-linux-${arch}" \
  && chmod +x /usr/local/bin/bazel

# Pre-warm: download Bazel itself so first build does not pay the cost.
RUN mkdir /tmp/warmup && cd /tmp/warmup \
  && echo "${BAZEL_VERSION}" > .bazelversion \
  && touch MODULE.bazel WORKSPACE \
  && bazel version \
  && rm -rf /tmp/warmup

LABEL description="NVCF monorepo Bazel CI image - Ubuntu 24.04 + Bazel ${BAZEL_VERSION} + kubebuilder-tools ${KUBEBUILDER_TOOLS_VERSION}"
