# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""nvcf_java_rules: shared Bazel macros and platform constants for NVCF Java.

Standalone module. Holds no application code. Every Java library and service
module consumes it via bazel_dep + local_path_override, loads the shared Spring
Boot BOM and version constants from //:platform.bzl, and builds images with the
nvcf_spring_boot_image macro. See //:platform.bzl for the single source of truth
on Spring/Cloud/Testcontainers versions.
"""

module(
    name = "nvcf_java_rules",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.0.0")

# OCI base images for the vendored create_oci_image helper (used by the
# nvcf_spring_boot_image macro). These are declared here so a consuming Java
# service module inherits them transitively and does not re-pin the bases.
# Both mirror the root module's pins: the AWS public ECR mirrors avoid Docker
# Hub anonymous pull limits and resolve on the public GitHub mirror.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "temurin_jre",
    image = "public.ecr.aws/docker/library/eclipse-temurin",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "21-jre",
)
oci.pull(
    name = "ubuntu_noble",
    digest = "sha256:ef59d9e82939bbce08973bdffb8761b025f75369fb7d2882cdc4938b5a9e992e",
    image = "public.ecr.aws/ubuntu/ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(
    oci,
    "temurin_jre",
    "temurin_jre_linux_amd64",
    "temurin_jre_linux_arm64_v8",
    "ubuntu_noble",
    "ubuntu_noble_linux_amd64",
    "ubuntu_noble_linux_arm64_v8",
)
