load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//tools/bazel:java.bzl", "nvct_workspace_runfiles")

package(default_visibility = ["//visibility:public"])

exports_files([
    "NOTICE",
    "maven_install.json",
])

filegroup(
    name = "integration_local_env_files",
    srcs = [
        "local_env/docker-compose.test.yml",
    ] + glob([
        "local_env/cassandra/**",
        "local_env/vault/**",
    ]),
)

nvct_workspace_runfiles(
    name = "integration_local_env",
    srcs = [":integration_local_env_files"],
)

genrule(
    name = "third_party_notice",
    srcs = [
        ":maven_install.json",
        "//nvct-service:app",
        "//tools/bazel:notice_metadata.json",
        "@nv_boot_parent//tools/bazel:generate_notice.py",
    ],
    outs = ["THIRD_PARTY_NOTICE"],
    cmd = """
python3 "$(location @nv_boot_parent//tools/bazel:generate_notice.py)" \
    --maven-install "$(location :maven_install.json)" \
    --metadata "$(location //tools/bazel:notice_metadata.json)" \
    --runtime-jar "$(location //nvct-service:app)" \
    --first-party-group com.nvidia.nvct \
    --output "$@" \
    --write
""",
)

sh_binary(
    name = "generate_notice",
    srcs = ["//tools/bazel:generate_notice.sh"],
    data = [
        "//nvct-service:app",
        "@nv_boot_parent//tools/bazel:generate_notice.py",
    ],
)
