load("//rules/java:defs.bzl", "nvct_workspace_runfiles")
load("//rules/java:notice.bzl", "nvcf_notice", "nvcf_notice_delta")

package(default_visibility = ["//visibility:public"])

# NOTICE and its service-local metadata are owned by this subtree. The
# third-party artifact lock is the single root //:maven_install.json; the
# generation algorithm is root-owned under //tools/bazel/java.
exports_files([
    "NOTICE",
    "notice_metadata.json",
])

filegroup(
    name = "integration_local_env_files",
    srcs = [
        "local_env/docker-compose.test.yml",
    ] + glob([
        "local_env/cassandra/**",
        "local_env/vault/**",
    ]),
)

# The tests read local_env paths (e.g. local_env/vault/secrets.json) relative
# to the runfiles workspace root, the JVM working directory under `bazel test`.
# Strip the package prefix so these files land root-relative in runfiles; in the
# standalone repo this package was the repo root, so no strip was needed.
nvct_workspace_runfiles(
    name = "integration_local_env",
    srcs = [":integration_local_env_files"],
    strip_prefix = "src/control-plane-services/cloud-tasks/",
    visibility = ["//src/control-plane-services/cloud-tasks:__subpackages__"],
)

nvcf_notice(
    checked_notice = ":NOTICE",
    first_party_groups = ["com.nvidia.nvct"],
    inventory_name = "cloud_tasks_runtime_inventory",
    metadata = ":notice_metadata.json",
    runtime_target = "//src/control-plane-services/cloud-tasks/nvct-service:app",
    shared_metadata = [
        "//src/libraries/java/nv-boot-parent:notice_metadata.json",
    ],
)

nvcf_notice_delta(
    baseline_inventories = [
        "//src/libraries/java/nv-boot-parent:runtime_inventory.json",
    ],
    inventory = ":runtime_inventory.json",
)
