# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""nvct_cloud_tasks: the NVCF cloud-tasks Java service, as a standalone module.

Depends on nvcf_java_rules (shared macros + image helper) and nv_boot_parent
(the Spring platform starters), both via bazel_dep + local_path_override in-tree.
Resolves its own @maven graph into its own committed maven_install.json and
builds on its own: `cd src/control-plane-services/cloud-tasks && bazel build //...`.

The boms list in maven.install is inlined (load() is forbidden in MODULE.bazel)
and must stay identical to SPRING_BOOT_BOM in @nvcf_java_rules//:platform.bzl;
//:bom_alignment_test enforces that.
"""

module(
    name = "nvct_cloud_tasks",
    version = "1.0.0",
)

bazel_dep(name = "nvcf_java_rules", version = "0.1.0")
local_path_override(
    module_name = "nvcf_java_rules",
    path = "../../../rules/java",
)

bazel_dep(name = "nv_boot_parent", version = "4.0.7")
local_path_override(
    module_name = "nv_boot_parent",
    path = "../../libraries/java/nv-boot-parent",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")

# gRPC-Java codegen: rules_proto_grpc_java drives protoc-gen-grpc-java (fetched
# as native binaries below) to generate the nvct.proto stubs. protobuf provides
# the well-known types; toolchains_protoc registers a prebuilt protoc so the
# proto_library does not compile the C++ protobuf compiler from source.
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "toolchains_protoc", version = "0.6.1")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v33.0",
)

GRPC_VERSION = "1.63.0"

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

http_file(
    name = "grpc_java_plugin_linux_aarch_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "471427565ad82b3caac5e19dba2d15fb75b81042503ea32357630312d1f074b4",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_linux_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "0e3e8db80ba1fbddeed97ea3220b52cfaa95764ff8bf00716df7322883ce47e8",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_osx_aarch_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "28290117a2ee9ea60f50f94273ab139dc2b3be4b8f2a557bef7e6efefee5b363",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_osx_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "28290117a2ee9ea60f50f94273ab139dc2b3be4b8f2a557bef7e6efefee5b363",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_windows_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "c3e9aaefd825a6ea9a252e153e0998d7ef36a7b27c2156867a98c71edf9c18a1",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-windows-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-windows-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        # nv-boot-parent third-party closure (Spring Boot 4 / Spring Cloud /
        # OTel / Cassandra / Testcontainers). Root coordinates only: BOM-managed
        # starters/modules, parent-owned explicit pins, and build/test tools.
        "at.yawk.lz4:lz4-java:1.10.3",
        "com.github.ben-manes.caffeine:guava",
        "com.github.java-json-tools:json-patch:1.13",
        "commons-codec:commons-codec",
        "io.cloudevents:cloudevents-core:4.1.1",
        "io.cloudevents:cloudevents-json-jackson:4.1.1",
        "io.micrometer:micrometer-tracing-bridge-otel",
        "io.nats:jnats:2.23.0",
        "io.opentelemetry:opentelemetry-exporter-otlp",
        "io.opentelemetry:opentelemetry-sdk-testing",
        "jakarta.servlet:jakarta.servlet-api",
        "org.apache.cassandra:java-driver-metrics-micrometer",
        "org.apache.commons:commons-lang3:3.20.0",
        "org.bouncycastle:bcprov-jdk18on:1.84",
        "org.jacoco:org.jacoco.agent:jar:runtime:0.8.14",
        "org.jacoco:org.jacoco.cli:0.8.14",
        "org.junit.platform:junit-platform-console-standalone:6.0.3",
        "org.ow2.asm:asm-analysis:9.9",
        "org.ow2.asm:asm-util:9.9",
        "org.projectlombok:lombok",
        "org.springdoc:springdoc-openapi-starter-webflux-api:3.0.3",
        "org.springdoc:springdoc-openapi-starter-webmvc-api:3.0.3",
        "org.springframework.boot:spring-boot-micrometer-tracing-opentelemetry",
        "org.springframework.boot:spring-boot-restclient",
        "org.springframework.boot:spring-boot-starter",
        "org.springframework.boot:spring-boot-starter-actuator",
        "org.springframework.boot:spring-boot-starter-actuator-test",
        "org.springframework.boot:spring-boot-starter-data-cassandra",
        "org.springframework.boot:spring-boot-starter-data-cassandra-test",
        "org.springframework.boot:spring-boot-starter-jackson",
        "org.springframework.boot:spring-boot-starter-security-oauth2-client",
        "org.springframework.boot:spring-boot-starter-security-oauth2-resource-server",
        "org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test",
        "org.springframework.boot:spring-boot-starter-test",
        "org.springframework.boot:spring-boot-starter-validation",
        "org.springframework.boot:spring-boot-starter-webflux",
        "org.springframework.boot:spring-boot-starter-webflux-test",
        "org.springframework.boot:spring-boot-starter-webmvc-test",
        "org.springframework.boot:spring-boot-webclient",
        "org.springframework.cloud:spring-cloud-commons",
        "org.springframework.cloud:spring-cloud-context",
        "org.springframework.cloud:spring-cloud-starter-bootstrap",
        "org.springframework.security:spring-security-test",
        "org.testcontainers:testcontainers-cassandra",
        "org.testcontainers:testcontainers-junit-jupiter",
        "org.wiremock:wiremock-standalone:3.13.2",
        "software.amazon.awssdk:regions:2.40.1",
        "tools.jackson.module:jackson-module-blackbird",
        # examples/java-spring-boot-service (versions from the Spring Boot BOM).
        "org.springframework.boot:spring-boot-starter-web",
        "org.junit.jupiter:junit-jupiter-api",
        "org.junit.jupiter:junit-jupiter-engine",
        "org.junit.platform:junit-platform-launcher",
        "org.junit.platform:junit-platform-reporting",
        # cloud-tasks service closure. Version-less coordinates are managed by
        # the BOMs above (spring-boot 4.0.7 / spring-cloud 2025.1.2 /
        # testcontainers 2.0.5 / shedlock 7.7.0). Explicit versions match the
        # cloud-tasks standalone module; io.grpc pins track GRPC_VERSION.
        "com.bucket4j:bucket4j_jdk17-core:8.19.0",
        "com.github.ben-manes.caffeine:caffeine",
        "com.google.protobuf:protobuf-java:4.33.4",
        "com.google.protobuf:protobuf-java-util:4.33.4",
        "io.grpc:grpc-api:%s" % GRPC_VERSION,
        "io.grpc:grpc-protobuf:%s" % GRPC_VERSION,
        "io.grpc:grpc-stub:%s" % GRPC_VERSION,
        "io.micrometer:micrometer-registry-prometheus",
        "io.projectreactor.netty:reactor-netty-core",
        "io.projectreactor.netty:reactor-netty-http",
        "javax.annotation:javax.annotation-api:1.3.2",
        "net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE",
        "net.javacrumbs.shedlock:shedlock-provider-cassandra",
        "net.javacrumbs.shedlock:shedlock-spring",
        "org.assertj:assertj-core",
        "org.awaitility:awaitility",
        "org.junit.jupiter:junit-jupiter-params",
        "org.mockito:mockito-core",
        "org.mockito:mockito-junit-jupiter",
        "org.ow2.asm:asm:9.9",
        "org.ow2.asm:asm-commons:9.9",
        "org.ow2.asm:asm-tree:9.9",
        "org.springframework:spring-context-support",
        "org.springframework:spring-webflux",
        "org.springframework.boot:spring-boot-actuator",
        "org.springframework.boot:spring-boot-loader",
        "org.springframework.boot:spring-boot-micrometer-metrics",
        "org.springframework.boot:spring-boot-micrometer-tracing",
        "org.springframework.boot:spring-boot-opentelemetry",
        "org.springframework.boot:spring-boot-starter-aspectj",
        "org.springframework.boot:spring-boot-starter-security",
        "org.springframework.boot:spring-boot-starter-webmvc",
        "org.springframework.cloud:spring-cloud-starter-kubernetes-client-config",
        "org.springframework.retry:spring-retry",
        "org.testcontainers:testcontainers",
        "org.testcontainers:testcontainers-localstack",
    ],
    boms = [
        "net.javacrumbs.shedlock:shedlock-bom:7.7.0",
        "org.springframework.boot:spring-boot-dependencies:4.0.7",
        "org.springframework.cloud:spring-cloud-dependencies:2025.1.2",
        "org.testcontainers:testcontainers-bom:2.0.5",
    ],
    fail_on_missing_checksum = True,
    fetch_sources = True,
    known_contributing_modules = [
        "protobuf",
        "rules_proto_grpc_java",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        # Public Central mirrors only. This is the public GitHub mirror; its
        # hosted runners cannot resolve the internal Artifactory host, so the
        # pinned closure must fetch from public repositories. The Google-hosted
        # Central mirror is primary (not IP-rate-limited like repo1.maven.org);
        # Maven Central is the fallback. Internal builds that need NVIDIA
        # artifacts add the Artifactory virtual repo in their own overlay.
        "https://maven-central.storage-download.googleapis.com/maven2",
        "https://repo.maven.apache.org/maven2",
    ],
    resolver = "maven",
)
use_repo(maven, "maven")
